make archetype generate a provider without use of the sorcer plugin fix the integration test
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@388 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/sorcer-provider/pom.xml
+++ b/iGrid/tools/sorcer-provider/pom.xml
@@ -10,17 +10,13 @@
     </parent>
 
     <artifactId>sorcer-provider</artifactId>
-    <packaging>maven-archetype</packaging>
+	<version>1.0.0-alfa-1</version>
+	<packaging>maven-archetype</packaging>
 
     <name>SORCER tools :: sorcer provider archetype</name>
 
     <description>SORCER provider archetype</description>
     <url>http://sorcersoft.com/</url>
-
-	<properties>
-		<maven.test.skip>true</maven.test.skip>
-		<skipTests>true</skipTests>
-	</properties>
 
     <build>
         <extensions>
