--- a/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>SORCER ${rootArtifactId} :: api</name>
+	<artifactId>${rootArtifactId}-api</artifactId>
+	<name>SORCER :: ${rootArtifactId} :: api</name>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-platform</artifactId>
+		</dependency>
+	</dependencies>
 </project>
