--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/archetype.properties
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/archetype.properties
@@ -1,13 +1,13 @@
 #Wed Mar 20 10:23:05 CET 2013
 #package i groupId powinny się różnić żeby przetestować poprawność zastosowanych zmiennych
-package=org.sorcersoft.sorcer
+package=com.sorcersoft.first
 version=1.0-SNAPSHOT
 groupId=com.example.sorcer
 artifactId=first
 providerInterface=HelloWorld
 providerClass=HelloWorldImpl
 projectDescription=Sample Service project description
-serviceName=Sample Service name
+serviceName=First
 serviceDescription=Sample Service description
 serviceGroup=sorcer-group
 usesSpacer=false
