--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/HelloWorld.config
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/HelloWorld.config
@@ -9,14 +9,16 @@ import sorcer.core.*;
 import sorcer.jini.jeri.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
-import com.sorcersoft.first.*;
 
 sorcer.core.provider.ServiceProvider {
 	/* service provider generic properties */
 	name = "HelloWorld";
-	description = "Example of a bean provider";
+	description = "Sample Service description";
 	publishedInterfaces = new Class[] { com.sorcersoft.first.HelloWorld.class };
 	// service beans
 	beanClasses = new Class[] { com.sorcersoft.first.HelloWorldImpl.class };
-	iconName="HelloWorld.jpg";
+	iconName="/META-INF/sorcer/sorcer.png";
+
+	monitorEnabled = false;
+    spaceEnabled = false;
 }
