--- a/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-prv/pom.xml
@@ -1,23 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <name>SORCER ${rootArtifactId} :: provider</name>
-    <description>SORCER</description>
-    <url>http://sorcersoft.org/</url>
+	<artifactId>${rootArtifactId}-prv</artifactId>
+	<name>SORCER :: ${rootArtifactId} :: provider</name>
+	<description>SORCER</description>
+	<url>http://sorcersoft.org/</url>
 
-    <dependencies>
-        <dependency>
-            <groupId>${groupId}</groupId>
-            <artifactId>${rootArtifactId}-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>${groupId}</groupId>
+			<artifactId>${rootArtifactId}-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-platform</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>commons-prv</artifactId>
+			<version>${v.sorcer}</version>
+		</dependency>
 
+		<!-- CodeBase -->
+		<dependency>
+			<groupId>${groupId}</groupId>
+			<artifactId>${rootArtifactId}-proxy</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.sorcersoft.sorcer</groupId>
+					<artifactId>locker</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.sorcersoft.sorcer</groupId>
+					<artifactId>sos-env</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<!--
+						<plugin>
+							<groupId>org.sorcersoft.sorcer</groupId>
+							<artifactId>sorcer-maven-plugin</artifactId>
+						</plugin>
+			-->
+		</plugins>
+
+		<!-- Enable maven filter feature for all *.groovy and *.config files in the src/main/resources -->
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/*.config</include>
+					<include>**/*.groovy</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<excludes>
+					<exclude>**/*.config</exclude>
+					<exclude>**/*.groovy</exclude>
+				</excludes>
+			</resource>
+		</resources>
+	</build>
 </project>
