--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <artifactId>first</artifactId>
-        <groupId>org.sorcersoft.sorcer</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+    <artifactId>first</artifactId>
+    <groupId>com.example.sorcer</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>first-api</artifactId>
-    <name>SORCER examples :: first :: api</name>
+	<artifactId>first-api</artifactId>
+	<name>SORCER :: first :: api</name>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
-            <version>${v.sorcer}</version>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-platform</artifactId>
+		</dependency>
+	</dependencies>
 </project>
