--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -10,7 +10,6 @@ import sorcer.util.ArtifactCoordinates;
 com.sun.jini.start {
 	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
-	ps = System.getProperty("path.separator");
 
 	port = 0;
 
@@ -22,15 +21,15 @@ com.sun.jini.start {
 		new SorcerServiceDescriptor(
 			Resolver.resolveCodeBase(
 				new ArtifactCoordinates[]{
-					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-api:1.0-SNAPSHOT"),
+					ArtifactCoordinates.coords("com.example.sorcer:first-api:1.0-SNAPSHOT"),
 					Artifact.getSosPlatform()
 				}
 			),
 			policy,
 			Resolver.resolveClassPath(
 				new ArtifactCoordinates[]{
-					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-api:1.0-SNAPSHOT"),
-					ArtifactCoordinates.coords("org.sorcersoft.sorcer:first-prv:1.0-SNAPSHOT")
+					ArtifactCoordinates.coords("com.example.sorcer:first-api:1.0-SNAPSHOT"),
+					ArtifactCoordinates.coords("com.example.sorcer:first-prv:1.0-SNAPSHOT")
 				}
 			),
 			"sorcer.core.provider.ServiceTasker",
