fix archetype poms
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@389 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/test/resources/projects/first/reference/first-api/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
 	<artifactId>first-api</artifactId>
-	<name>SORCER :: first :: api</name>
+	<name>SORCER :: first :: API</name>
 
 	<dependencies>
 		<dependency>
