--- a/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
+++ b/iGrid/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-api/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 	<artifactId>${rootArtifactId}-api</artifactId>
-	<name>SORCER :: ${rootArtifactId} :: api</name>
+	<name>SORCER :: ${rootArtifactId} :: API</name>
 
 	<dependencies>
 		<dependency>
