refactored Jini startup scripts
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@395 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/shell/configs/nsh-start.config
+++ b/iGrid/bin/shell/configs/nsh-start.config
@@ -14,7 +14,7 @@
     # load required libraries
     
     load !{mvn:org.sorcersoft.sorcer:sos-shell}
-    load !{mvn:org.sorcersoft.sorcer:boot}
+    #load !{mvn:org.sorcersoft.sorcer:boot}
     load !{mvn:org.sorcersoft.sorcer:sos-platform}
     load !{mvn:org.sorcersoft.sorcer:sos-util}
     load !{mvn:org.rioproject:rio-platform}
