temporarily disable testing of the maven plugin
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@400 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/sorcer-provider/pom.xml
+++ b/iGrid/tools/sorcer-provider/pom.xml
@@ -18,6 +18,10 @@
     <description>SORCER provider archetype</description>
     <url>http://sorcersoft.com/</url>
 
+	<properties>
+		<maven.test.skip>true</maven.test.skip>
+	</properties>
+
     <build>
         <extensions>
             <extension>
