--- a/iGrid/bin/jini/configs/browser.config
+++ b/iGrid/bin/jini/configs/browser.config
@@ -1,6 +1,9 @@
-import sorcer.util.Sorcer;
+import com.sun.jini.config.ConfigUtil;
 
 com.sun.jini.example.browser {
-    initialLookupGroups = Env.getGroups();
+    hostname = ConfigUtil.getHostName();
+    userName = System.getProperty("user.name");
+    initialLookupGroups = new String[] { "sorcer." + userName };
     exitActionListener = new com.sun.jini.example.browser.Browser.Exit();
 }
+
