--- a/iGrid/bin/jini/configs/reggie-boot.config
+++ b/iGrid/bin/jini/configs/reggie-boot.config
@@ -11,7 +11,7 @@ com.sun.jini.reggie {
     name = Sorcer.getActualName("Service Registry");
     userName = System.getProperty("user.name");
     initialMemberGroups = Sorcer.getLookupGroups();
-    initialLookupGroups = new String[] { "" };
+    //initialLookupGroups = new String[] { "" };
     hostName = ConfigUtil.getHostName();
     initialLookupAttributes = new Entry[] { new Name(name), 
     	new Comment("member group:" + Arrays.toString(initialMemberGroups)), 
