sorcer maven booter - WIP
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@406 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -10,6 +10,7 @@
     <version>11.1</version>
     <description>SORCER</description>
     <url>http://sorcersoft.org/</url>
+	<inceptionYear>2013</inceptionYear>
 
     <properties>
 		<v.sorcer>11.1</v.sorcer>
