--- a/iGrid/tools/sorcer-maven-plugin/pom.xml
+++ b/iGrid/tools/sorcer-maven-plugin/pom.xml
@@ -48,6 +48,11 @@
 			<groupId>org.sonatype.aether</groupId>
 			<artifactId>aether-util</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
