--- a/iGrid/tools/sorcer-maven-plugin/src/it/simple-it/pom.xml
+++ b/iGrid/tools/sorcer-maven-plugin/src/it/simple-it/pom.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.sorcersoft.sorcer.it</groupId>
-  <artifactId>simple-it</artifactId>
-  <version>1.0-SNAPSHOT</version>
+	<groupId>org.sorcersoft.sorcer.it</groupId>
+	<artifactId>simple-it</artifactId>
+	<version>1.0-SNAPSHOT</version>
 
-  <description>A simple IT verifying the basic use case.</description>
+	<description>A simple IT verifying the basic use case.</description>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>sorcer-maven-plugin</artifactId>
-        <version>11.1</version>
-            <goals>
-              <goal>sorcer</goal>
-            </goals>
-      </plugin>
-    </plugins>
-  </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.sorcersoft.sorcer</groupId>
+				<artifactId>sorcer-maven-plugin</artifactId>
+				<version>11.1</version>
+				<goals>
+					<goal>sorcer</goal>
+				</goals>
+				<executions>
+					<execution>
+						<id>sorcer-preit</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>boot</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>sorcer-postit</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>destroy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
