Jini startup scripts reverted, simplified and now they get the configured lookup group
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@410 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/jini/configs/bootAll.config
+++ b/iGrid/bin/jini/configs/bootAll.config
@@ -16,7 +16,7 @@ com.sun.jini.start {
 
 	private static ps = System.getProperty("path.separator");
 	private static fs = System.getProperty("file.separator");
-	private static home = "${sorcer.home}";
+	private static home = "${iGrid.home}";
     private static policy = "${java.security.policy}";
     private static host = ConfigUtil.getHostName();
     private static port = "8091";
