--- a/iGrid/bin/jini/configs/reggie-boot.config
+++ b/iGrid/bin/jini/configs/reggie-boot.config
@@ -9,10 +9,8 @@ import java.util.Arrays;
 
 com.sun.jini.reggie {
     name = Sorcer.getActualName("Service Registry");
-    userName = System.getProperty("user.name");
     initialMemberGroups = Sorcer.getLookupGroups();
-    //initialLookupGroups = new String[] { "" };
-    hostName = ConfigUtil.getHostName();
+    hostName = Booter.getHostName();
     initialLookupAttributes = new Entry[] { new Name(name), 
     	new Comment("member group:" + Arrays.toString(initialMemberGroups)), 
     	new Comment("host:" + hostName), 
