--- a/iGrid/bin/jini/configs/start-generic.config
+++ b/iGrid/bin/jini/configs/start-generic.config
@@ -6,7 +6,7 @@ com.sun.jini.start {
 	private static ps = System.getProperty("path.separator");
 	private static fs = System.getProperty("file.separator");
 	
-	private static home = "${sorcer.home}";
+	private static home = "${iGrid.home}";
     private static webster = "${provider.webster.url}";
     
     private static codebase = ConfigUtil.concat(new Object[] {
