--- a/iGrid/configs/boot-http-sorcer.config
+++ b/iGrid/configs/boot-http-sorcer.config
@@ -89,13 +89,13 @@ com.sun.jini.start {
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}norm.config" }),
             
-        new SorcerServiceDescriptor(
+/*        new SorcerServiceDescriptor(
 	      	"" + Resolver.resolveRelative("org.apache.river:outrigger-dl"),
             policy,
             Resolver.resolveAbsolute("org.apache.river:outrigger"),
             "com.sun.jini.outrigger.TransientOutriggerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
-            
+*/
 
    		// Blitz
 
