--- a/iGrid/bin/jini/configs/browser.config
+++ b/iGrid/bin/jini/configs/browser.config
@@ -1,9 +1,6 @@
-import com.sun.jini.config.ConfigUtil;
+import sorcer.util.Sorcer;
 
 com.sun.jini.example.browser {
-    hostname = ConfigUtil.getHostName();
-    userName = System.getProperty("user.name");
-    initialLookupGroups = new String[] { "sorcer." + userName };
+    initialLookupGroups = Env.getGroups();
     exitActionListener = new com.sun.jini.example.browser.Browser.Exit();
 }
-
