--- a/iGrid/bin/jini/configs/mahalo.config
+++ b/iGrid/bin/jini/configs/mahalo.config
@@ -3,22 +3,13 @@ import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
-import com.sun.jini.config.ConfigUtil;
-import java.util.Arrays;
+import sorcer.provider.boot.Booter;
+import sorcer.util.Sorcer;
 
 com.sun.jini.mahalo {
-    name = "Transaction Manager";
-    userName = System.getProperty("user.name");
-    hostname = ConfigUtil.getHostName();
-    initialLookupGroups = new String[] { "sorcer." + userName };
-    initialLookupAttributes = new Entry[] { new Name(name),
-    	new Comment("group:" + Arrays.toString(initialLookupGroups)),
-    	new Comment(hostname),
-    	new Comment(userName) };
-
-    //initialLookupLocators
-    //initialUnicastDiscoveryPort
-
-    //serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+    name = Sorcer.getActualName("Transaction Manager");
+    initialLookupGroups = Sorcer.getLookupGroups();
+    hostName = Booter.getHostName();
+    initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 }
-
