--- a/iGrid/bin/jini/configs/reggie.config
+++ b/iGrid/bin/jini/configs/reggie.config
@@ -3,23 +3,16 @@ import net.jini.jeri.BasicILFactory;
 import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
-import com.sun.jini.config.ConfigUtil;
-import java.util.Arrays;
+import sorcer.provider.boot.Booter;
+import sorcer.util.Sorcer;
 
 com.sun.jini.reggie {
-    name = "Service Registry";
-    userName = System.getProperty("user.name");
-    hostname = ConfigUtil.getHostName();
-    initialMemberGroups = new String[] { "sorcer." + userName };
-    initialLookupGroups = new String[] { "" };
-    initialLookupAttributes = new Entry[] { new Name(name),
-    	new Comment("group:" + Arrays.toString(initialLookupGroups)),
-    	new Comment(hostname),
-    	new Comment(userName) };
-
+    name = Sorcer.getActualName("Service Registry");
+    initialMemberGroups = Sorcer.getLookupGroups();
+    hostName = Booter.getHostName();
+    initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     //initialLookupLocators
     //initialUnicastDiscoveryPort
-
-    //serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
+   
+    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 }
-
