--- a/iGrid/tools/sorcer-maven-plugin/pom.xml
+++ b/iGrid/tools/sorcer-maven-plugin/pom.xml
@@ -38,6 +38,11 @@
 			<version>3.2</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.jcabi</groupId>
+			<artifactId>jcabi-aether</artifactId>
+			<version>0.7.18</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
