Minor problem in jini configs, TaskTest updated for new operator.task...
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@412 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/jini/configs/fiddler.config
+++ b/iGrid/bin/jini/configs/fiddler.config
@@ -9,7 +9,7 @@ import sorcer.util.Sorcer;
 com.sun.jini.fiddler {
     initialLookupGroups = Sorcer.getLookupGroups();
     hostName = Booter.getHostName();
-    name = Sorcer.getActualName("Exert Space");
+    name = Sorcer.getActualName("Lookup Discovery Service");
     initialLookupAttributes = new Entry[] { new Name(name), new Comment(hostName) };
     serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 }
