add module sos-tests to pom, disable its tests
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@414 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/sos/pom.xml
+++ b/iGrid/sos/pom.xml
@@ -25,5 +25,6 @@
         <module>commons-req</module>
         <module>commons-prv</module>
 		<module>sos-mod</module>
+		<module>sos-tests</module>
      </modules>
 </project>
