--- a/iGrid/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
+++ b/iGrid/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
@@ -1,10 +1,6 @@
-net.jini = /river/lib
-net.jini.lookup = /river/lib
-org.apache.river = /river/lib
-org.dancres.blitz = /commons/lib
-org.sorcersoft.sigar = /commons/lib
-org.rioproject = /rio/lib
-org.rioproject.resolver = /rio/lib
-com.sleepycat.je = /commons/lib
-org.codehaus.groovy = /commons/lib
-org.sorcersoft.sorcer = /sorcer/lib
+net.jini = river
+net.jini.lookup = river
+org.apache.river = river
+org.rioproject = rio
+org.rioproject.resolver = rio
+org.sorcersoft.sorcer = sorcer
