Scripts and resolver adapted for distribution. Basic services boot from distribution but examples don't work and shell doesn't work
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@421 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/jini/configs/start-generic.config
+++ b/iGrid/bin/jini/configs/start-generic.config
@@ -15,9 +15,10 @@ com.sun.jini.start {
 	    });
 	    
     private static classpath =  ConfigUtil.concat(new Object[] {
-    	home, fs, "lib", fs, "river", fs, "lib", fs, "${impl.jar}", ps,
-    	home, fs, "lib", fs, "river", fs, "lib", fs, "jsk-lib.jar", ps,
-    	home, fs, "lib", fs, "sorcer", fs, "lib", fs, "sorcer-prv.jar"
+    	home, fs, "lib", fs, "river", fs, "${impl.jar}", ps,
+    	home, fs, "lib", fs, "river", fs, "jsk-lib.jar", ps,
+    	home, fs, "lib", fs, "sorcer",fs, "sos-env.jar", ps,
+    	home, fs, "lib", fs, "sorcer",fs, "sos-platform.jar"
     	});
     	
    	private static policy = "${java.security.policy}";
