--- a/iGrid/bin/jini/configs/startAll.config
+++ b/iGrid/bin/jini/configs/startAll.config
@@ -18,8 +18,8 @@ com.sun.jini.start {
     private static host = ConfigUtil.getHostName();
     private static port = "8081";
     private static jskdl = " http://" + host + ":" + port + "/jsk-dl.jar";
- 	private static jlib = home + "/lib/river/lib";
- 	private static jDlLib = home + "/lib/river/lib-dl";
+ 	private static jlib = home + "/lib/river";
+ 	private static jDlLib = home + "/lib/river";
  	
     serviceDescriptors = new ServiceDescriptor[]{
         new NonActivatableServiceDescriptor(
