--- a/iGrid/bin/webster/configs/webster-prv.config
+++ b/iGrid/bin/webster/configs/webster-prv.config
@@ -2,34 +2,34 @@ import java.net.URL;
 import sorcer.provider.boot.Booter;
 import sorcer.util.Sorcer;
 import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
+
 
 
 sorcer.tools.codeserver {
 
     home = "${sorcer.home}";
-    repo = SorcerEnv.getRepoDir() + "/";
-    jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
-    jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
+    rootDir = Resolver.getRootDir() + "/";
+    jiniLibPath 	 = home + "${/}lib${/}river";
     deployPath 		 = home + "${/}deploy";
 
-	//provider.webster.port
-	websterPort = Booter.getWebsterPort(); 
-	//websterPort = 0;
-	//provider.webster
-	websterAddress = Booter.getWebsterInterface();
-	startPort = Booter.getWebsterStartPort();
-	endPort = Booter.getWebsterEndPort();
-	isDaemon = false;
-	
-	roots = new String[] { repo,
-	  jiniLibDLPath,
-	  jiniLibPath,
-	  deployPath,
-	};
-        
-	options = new String[] { "-port", "" + websterPort, 
-		"-bindAddress", websterAddress, 
-		"-startPort", "" + startPort, 
-		"-endPort", "" + endPort, 
-		"-isDaemon", "" + isDaemon };
+    //provider.webster.port
+    websterPort = Booter.getWebsterPort(); 
+    //websterPort = 0;
+    //provider.webster
+    websterAddress = Booter.getWebsterInterface();
+    startPort = Booter.getWebsterStartPort();
+    endPort = Booter.getWebsterEndPort();
+    isDaemon = false;
+    
+    roots = new String[] { rootDir,
+      jiniLibPath,
+      deployPath,
+    };
+    
+    options = new String[] { "-port", "" + websterPort, 
+	    "-bindAddress", websterAddress, 
+	    "-startPort", "" + startPort, 
+	    "-endPort", "" + endPort, 
+	    "-isDaemon", "" + isDaemon };
 }
