--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -19,6 +19,7 @@
         <v.sleepycat>4.1.21</v.sleepycat>
         <v.rio>5.0-M2</v.rio>
         <v.groovy>2.1.2</v.groovy>
+        <v.sigar>1.6.4</v.sigar>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<sorcer.home>${project.basedir}</sorcer.home>
