--- a/iGrid/bin/jini/configs/start-outrigger.config
+++ b/iGrid/bin/jini/configs/start-outrigger.config
@@ -13,7 +13,7 @@ import sorcer.provider.boot.SorcerServiceDescriptor;
 com.sun.jini.start {
 	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
-	jiniLibPath = home + "${/}lib${/}river${/}lib";
+	jiniLibPath = home + "${/}lib${/}river";
 
     serviceDescriptors = new ServiceDescriptor[] {
         new SorcerServiceDescriptor(
