--- a/iGrid/bin/shell/configs/nsh-init.config
+++ b/iGrid/bin/shell/configs/nsh-init.config
@@ -5,14 +5,13 @@
 import net.jini.core.discovery.LookupLocator;
 import javax.security.auth.login.LoginContext;
 import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
 
 sorcer.tools.shell.NetworkShell {
 
 	home = "${sorcer.home}";
 		
 	userName = System.getProperty("user.name");
-	
-	mvnRepo = SorcerEnv.getRepoDir() + "/";
 	
 	//groups = new String[] { "sorcer.TEST10" };
 	
@@ -23,16 +22,11 @@ sorcer.tools.shell.NetworkShell {
 	httpPort = 9090;
 	
 	// webster root directories (codebase)
- 	//sorcerLibDlPath = home + "${/}lib${/}sorcer${/}lib-dl";
-	//jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
-	//rioLibDLPath 	= home + "${/}lib${/}rio${/}lib-dl";
-	//engLibDLPath 	= home + "${/}lib${/}eng${/}lib-dl";
-	///dataPath 	    = home + "${/}data";
-	//httpRoots = new String[] { sorcerLibDlPath, jiniLibDLPath, engLibDLPath, dataPath };
-	httpRoots = new String[] { mvnRepo };
+	dataPath 	    = home + "${/}data";
+	httpRoots = new String[] { Resolver.getRootDir(), dataPath };
 	
 	// exported classes for examples 
-	httpJars = new String[] { "arithmetic-dl.jar", "whoIsIt-dl.jar", "worker-dl.jar" };
+	httpJars = new String[] { "" };
 	
 	noHttp = false;
 	
