--- a/iGrid/configs/boot-sorcer.config
+++ b/iGrid/configs/boot-sorcer.config
@@ -22,8 +22,7 @@ com.sun.jini.start {
     ps = System.getProperty("path.separator");
 
     // webster root directories
-    jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
-    jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
+    jiniLibPath 	 = home + "${/}lib${/}river";
     deployPath 		 = home + "${/}deploy";
     httpData 		 = home + "${/}data";
 
@@ -91,7 +90,7 @@ com.sun.jini.start {
             ConfigUtil.concat(new Object[] {
             	Resolver.resolveAbsolute("org.dancres.blitz:blitz"), ps,
             	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-            	Resolver.resolveAbsolute("com.sleepycat:je:4.1.21"), ps,
+            	Resolver.resolveAbsolute("com.sleepycat:je"), ps,
             	Resolver.resolveAbsolute("net.jini.lookup:serviceui"), ps,
             	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
             	Resolver.resolveAbsolute("net.jini:jsk-platform")
@@ -118,33 +117,32 @@ com.sun.jini.start {
    		// SORCER Job Service 
        		SorcerDescriptorUtil.getJobber(
        			policy,
-       			home + "${/}sos-providers${/}jobber${/}jobber-prv${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+       			home + "${/}bin${/}sos-providers${/}jobber.config"),
    
      		// SORCER Space Service
        		SorcerDescriptorUtil.getSpacer(
        			policy,
-       			home + "${/}sos-providers${/}spacer${/}spacer-prv${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"), 
+       			home + "${/}bin${/}sos-providers${/}spacer.config"),
 
     
        		// SORCER Catalog Service
       		SorcerDescriptorUtil.getCataloger(
        			policy, 
-       			home + "${/}sos-providers${/}cataloger${/}cataloger-prv${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+       			home + "${/}bin${/}sos-providers${/}cataloger.config"),
      			
        		// SORCER Logger Service
        		SorcerDescriptorUtil.getLogger(
        			policy, 
-       			home + "${/}sos-providers${/}logger${/}logger-prv${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+       			home + "${/}bin${/}sos-providers${/}logger.config"),
       			
        		// SORCER ExertMonitor Service
        		SorcerDescriptorUtil.getExertMonitor(
        			policy, 
-       			home + "${/}sos-providers${/}exertmonitor${/}exertmonitor-prv${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+       			home + "${/}bin${/}sos-providers${/}exertmonitor.config"),
        			
        		// SORCER Database Store Service
        		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
-       			home + "${/}sos-providers${/}dbp${/}dbp-prv${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config")
- 
+       			home + "${/}bin${/}sos-providers${/}dbp.config") 
     };
 }
