--- a/iGrid/configs/startup-boot-prv.config
+++ b/iGrid/configs/startup-boot-prv.config
@@ -7,14 +7,14 @@ import sorcer.provider.boot.SorcerDescriptorUtil;
 import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.core.SorcerEnv;
+import sorcer.resolver.Resolver;
 
 com.sun.jini.start {
  	home = "${sorcer.home}";
 	// webster root directories
-	jiniLibPath 	= home + "${/}lib${/}river${/}lib";
-	jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
-	deployPath 		= home + "${/}deploy";
-	repo = SorcerEnv.getRepoDir();
+	jiniLibPath 	= home + "${/}lib${/}river";
+	deployPath 	= home + "${/}deploy";
+	rootDir = Resolver.getRootDir();
 	
 	//port = Booter.getWebsterPort(); 
 	port = 0;
@@ -33,10 +33,9 @@ com.sun.jini.start {
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
         SorcerDescriptorUtil.getWebster(policy, port,
                                          new String[] { 
-                                         		jiniLibDLPath,
                                                         jiniLibPath,
                                                         deployPath,
-                                                        repo }),
+                                                        rootDir }),
     
        /* Provider descriptor */
        //String codebase, String policy, String classpath, String implClassName, String... serverConfigArgs)
