--- a/iGrid/distribution/pom.xml
+++ b/iGrid/distribution/pom.xml
@@ -125,6 +125,13 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- For integration test only -->
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>ju-arithmetic-prv</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!--    rio -->
         <dependency>
             <groupId>org.rioproject</groupId>
@@ -142,7 +149,18 @@
             <version>${v.rio}</version>
         </dependency>
 
+        <!--other-->
 
+        <dependency>
+            <groupId>ant-contrib</groupId>
+            <artifactId>ant-contrib</artifactId>
+            <version>1.0b3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-ant-tasks</artifactId>
+            <version>2.1.3</version>
+        </dependency>
 
     </dependencies>
 
