Updates to enable starting providers from distribution - still not running, breaks int-tests
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@423 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/pom.xml
@@ -28,22 +28,48 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
             <version>${project.version}</version>
+<!--
             <scope>provided</scope>
+-->
         </dependency>
         <dependency>
             <groupId>org.apache.river</groupId>
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
+            <scope>provided</scope>
+<!--
             <scope>runtime</scope>
+-->
         </dependency>
         <dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-lib</artifactId>
             <version>${v.jini}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
+    <build>
+    <plugins>
+  <!--      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <addExtensions>false</addExtensions>
+                        <classpathPrefix></classpathPrefix>
+                        <classpathLayoutType>custom</classpathLayoutType>
+                        <customClasspathLayout>${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>-->
+    </plugins>
+    </build>
 </project>
