--- a/iGrid/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
+++ b/iGrid/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
@@ -4,4 +4,4 @@ org.apache.river = river
 org.rioproject = rio
 org.rioproject.resolver = rio
 org.sorcersoft.sorcer = sorcer
-org.sorcersoft.sigar = sigar
+org.sorcersoft.sigar = sigar/lib
