--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
@@ -16,10 +16,9 @@ com.sun.jini.start {
 	ps = System.getProperty("path.separator");
 	
 	// webster root directories
-	jiniLibPath 	= home + "${/}lib${/}river${/}lib";
-	jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
+	jiniLibPath 	= home + "${/}lib${/}river";
 	deployPath 	= home + "${/}deploy";
-	repo 			 = SorcerEnv.getRepoDir() + "/";
+	repo = Resolver.getRootDir() + "/";
 	
 	port = Booter.getWebsterPort();
 	//port = 0;
@@ -34,53 +33,17 @@ com.sun.jini.start {
 	new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
  			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+// 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-env"),
 			policy,
 			ConfigUtil.concat(new Object[] {
 			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
-			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
-			    runtimeClasspath
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps
+			    //runtimeClasspath
 			}),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
-        ),
+        )
 
-	new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
-			policy,
-			ConfigUtil.concat(new Object[] {
-			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
-			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
-			    runtimeClasspath
-			}),
-			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}multiplier-prv.config" }
-       ),
-          	
-       new SorcerServiceDescriptor(
- 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
- 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
-			policy,
-			ConfigUtil.concat(new Object[] {
-			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
-			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
-			    runtimeClasspath
-			}),
-			"sorcer.core.provider.ServiceTasker",
-			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}divider-prv.config" }
-	   ),
 
-       new SorcerServiceDescriptor(
-		      ""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api")
-				  +" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
-		      policy,
-		      ConfigUtil.concat(new Object[] {
-			  Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
-			  Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
-			  runtimeClasspath
-		      }),
-		      "sorcer.core.provider.ServiceTasker",
-		      new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}subtractor-prv.config" }
-       )
     };
 }
