--- a/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/services.config
@@ -42,8 +42,47 @@ com.sun.jini.start {
 			}),
 			"sorcer.core.provider.ServiceTasker",
 			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
-        )
+        ),
 
+
+	new SorcerServiceDescriptor(
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api"),
+ //			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+			policy,
+			ConfigUtil.concat(new Object[] {
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
+			    runtimeClasspath
+			}),
+			"sorcer.core.provider.ServiceTasker",
+			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}multiplier-prv.config" }
+       ),
+
+       new SorcerServiceDescriptor(
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api"),
+ 	//		+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+			policy,
+			ConfigUtil.concat(new Object[] {
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
+			    Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
+			    runtimeClasspath
+			}),
+			"sorcer.core.provider.ServiceTasker",
+			new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}divider-prv.config" }
+	   ),
+
+       new SorcerServiceDescriptor(
+		      ""+Resolver.resolveRelative("org.sorcersoft.sorcer:ju-arithmetic-api"),
+	//			  +" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
+		      policy,
+		      ConfigUtil.concat(new Object[] {
+                  Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-api"), ps,
+                  Resolver.resolveAbsolute("org.sorcersoft.sorcer:ju-arithmetic-prv"), ps,
+                  runtimeClasspath
+		      }),
+		      "sorcer.core.provider.ServiceTasker",
+		      new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}subtractor-prv.config" }
+       )
 
     };
 }
