Deleted content of examples/ex5, fixed sorcer-browser in distribution
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@426 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/pom.xml
+++ b/iGrid/tools/pom.xml
@@ -29,4 +29,23 @@
 		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
 	</modules>
+	<build>
+	<plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jar-plugin</artifactId>
+		<configuration>
+		    <archive>
+			<manifest>
+			    <addClasspath>true</addClasspath>
+			    <addExtensions>false</addExtensions>
+			    <classpathPrefix></classpathPrefix>
+			    <classpathLayoutType>custom</classpathLayoutType>
+			    <customClasspathLayout>${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
+			</manifest>
+		    </archive>
+		</configuration>
+	    </plugin>
+	</plugins>
+	</build>
 </project>
