Added template for exerter
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@429 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/sos-providers/pom.xml
+++ b/iGrid/sos-providers/pom.xml
@@ -24,6 +24,7 @@
 		<module>exertmonitor</module>
 		<module>dbp</module>
 		<module>dsp</module>
-	</modules>
+        <module>exerter</module>
+    </modules>
 	
 </project>
