Added Exerter provider in sos-providers
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@434 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-sorcer.config
+++ b/iGrid/configs/boot-sorcer.config
@@ -143,6 +143,11 @@ com.sun.jini.start {
        		// SORCER Database Store Service
        		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
-       			home + "${/}bin${/}sos-providers${/}dbp.config") 
+       			home + "${/}bin${/}sos-providers${/}dbp.config"),
+
+       		/* SORCER network exert manager */
+            SorcerDescriptorUtil.getExerter(
+                policy,
+                home + "${/}bin${/}sos-providers${/}exerter-prv.config")
     };
 }
