--- a/iGrid/configs/boot-http-sorcer.config
+++ b/iGrid/configs/boot-http-sorcer.config
@@ -156,7 +156,12 @@ com.sun.jini.start {
        		// SORCER Database Store Service
        		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
-       			home + "${/}bin${/}sos-providers${/}dbp.config")
+       			home + "${/}bin${/}sos-providers${/}dbp.config"),
+
+       		/* SORCER network exert manager */
+            SorcerDescriptorUtil.getExerter(
+                policy,
+                home + "${/}bin${/}sos-providers${/}exerter-prv.config")
  
     };
 }
