maven plugin almost working with requestor

--- a/iGrid/examples/first/pom.xml
+++ b/iGrid/examples/first/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<version>11.1</version>
 		<artifactId>sorcer-root</artifactId>
+		<relativePath/>
 	</parent>
 
 	<groupId>com.example.sorcer</groupId>
@@ -27,6 +28,44 @@
 		<module>first-proxy</module>
 		<module>first-sui</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.sorcersoft.sorcer</groupId>
+				<artifactId>sorcer-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>sorcer-init</id>
+						<goals>
+							<goal>initialize</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>sorcer-preit</id>
+						<goals>
+							<goal>provider</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>sorcer-it</id>
+						<goals>
+							<goal>run-requestor</goal>
+						</goals>
+						<configuration>
+							<mainClass>com.example.sorcer.SampleServiceTester</mainClass>
+						</configuration>
+					</execution>
+					<execution>
+						<id>sorcer-postit</id>
+						<goals>
+							<goal>destroy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencyManagement>
 		<dependencies>
