--- a/iGrid/examples/first/first-prv/pom.xml
+++ b/iGrid/examples/first/first-prv/pom.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-    <artifactId>first</artifactId>
-    <groupId>com.example.sorcer</groupId>
-    <version>1.0.0-SNAPSHOT</version>
-  </parent>
+		<artifactId>first</artifactId>
+		<groupId>com.example.sorcer</groupId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
 
 	<artifactId>first-prv</artifactId>
 	<name>SORCER :: first :: provider</name>
@@ -48,7 +49,14 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.sorcersoft.sorcer</groupId>
+				<artifactId>sorcer-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
 
 		<!-- Enable maven filter feature for all *.groovy and *.config files in the src/main/resources -->
 		<resources>
