--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -114,16 +114,9 @@
         <pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>${project.groupId}</groupId>
+					<groupId>org.sorcersoft.sorcer</groupId>
 					<artifactId>sorcer-maven-plugin</artifactId>
 					<version>${v.sorcer}</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>sorcer</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -170,50 +163,41 @@
 					</filesets>
 				</configuration>
 			</plugin>
-			<!--	    <plugin>
-					  <groupId>org.apache.maven.plugins</groupId>
-					  <artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-					  <systemPropertyVariables>
-						  <SORCER_HOME>${sorcer.home}</SORCER_HOME>
-					  </systemPropertyVariables>
-					</configuration>
-					</plugin>-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-	    <plugin>
-	      <groupId>org.bitstrings.maven.plugins</groupId>
-	      <artifactId>dependencypath-maven-plugin</artifactId>
-	      <version>1.1.1</version>
-		<executions>
-		  <execution>
-		      <id>set-all</id>
-		      <goals>
-			  <goal>set</goal>
-		      </goals>
-		      <configuration>
-			  <propertySets>
-			  	<propertySet>
-			    	<suffix>norepo</suffix>
-                        <relativeTo>${settings.localRepository}</relativeTo>
-                        <transitive>false</transitive>
-                        <autoRelativeSuffix>true</autoRelativeSuffix>
-                </propertySet>
-		      </propertySets>
-		      </configuration>
-		  </execution>
-	      </executions>
-	    </plugin>
-        </plugins>
-    </build>
-    <repositories>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.0</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.bitstrings.maven.plugins</groupId>
+				<artifactId>dependencypath-maven-plugin</artifactId>
+				<version>1.1.1</version>
+				<executions>
+					<execution>
+						<id>set-all</id>
+						<goals>
+							<goal>set</goal>
+						</goals>
+						<configuration>
+							<propertySets>
+								<propertySet>
+									<suffix>norepo</suffix>
+									<relativeTo>${settings.localRepository}</relativeTo>
+									<transitive>false</transitive>
+									<autoRelativeSuffix>true</autoRelativeSuffix>
+								</propertySet>
+							</propertySets>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<repositories>
         <repository>
             <id>hashnot</id>
             <url>http://mvn.hashnot.com/content/groups/public</url>
