first: make provider test (-prv/srv/test/java) from -req

--- a/iGrid/examples/first/first-prv/pom.xml
+++ b/iGrid/examples/first/first-prv/pom.xml
@@ -55,6 +55,35 @@
 			<plugin>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sorcer-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>policy</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>sorcer-preit</id>
+						<goals>
+							<goal>provider</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>sorcer-it</id>
+						<goals>
+							<goal>run-requestor</goal>
+						</goals>
+						<configuration>
+							<mainClass>com.example.sorcer.SampleServiceTester</mainClass>
+							<scope>test</scope>
+						</configuration>
+					</execution>
+					<execution>
+						<id>sorcer-postit</id>
+						<goals>
+							<goal>destroy</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 
