--- a/iGrid/tools/sorcer-maven-plugin/src/main/resources/META-INF/sorcer-maven-plugin/sorcer.env
+++ b/iGrid/tools/sorcer-maven-plugin/src/main/resources/META-INF/sorcer-maven-plugin/sorcer.env
@@ -43,8 +43,7 @@ database.storer.name=Database Storage
 dataspace.storer.name=Dataspace Storage
 
 # Code server configuration
-provider.webster.interface=127.0.0.1
-#provider.webster.port=50001
+provider.webster.interface=${localhost}
 
 # Data/file repository configuration
 # Scratch directory format: 
