Added Exertleter to ex5

--- a/examples/ex5/ex5-req/pom.xml
+++ b/examples/ex5/ex5-req/pom.xml
@@ -12,6 +12,10 @@
 	<artifactId>ex5-req</artifactId>
 	<name>SORCER examples :: ex5 :: req</name>
 
+    <properties>
+        <skipTests>true</skipTests>
+    </properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
