Fixed ex5 exertlet-prv.config

--- a/examples/ex5/ex5-req/src/main/resources/META-INF/sorcer/exertlet-prv.config
+++ b/examples/ex5/ex5-req/src/main/resources/META-INF/sorcer/exertlet-prv.config
@@ -18,7 +18,7 @@ sorcer.core.provider.ServiceProvider {
 		name = "Arithmetic Exertleter";
 		description = "Exert an injected arithmetic exertion bean-exertleter";
 		location = "AFRL";
-		publishedInterfaces = new Class[] { sorcer.service.Invoker.class, sorcer.service.Evaluation.class };
+		publishedInterfaces = new Class[] { sorcer.service.Invocation.class, sorcer.service.Evaluation.class };
 			
 		// service beans	
 		beans = new Object[] { NetArithmeticReq.createArithmeticExertlet() };
