Added HybridArtifactResolver, fixed webster roots

--- a/bin/webster/configs/webster-prv.config
+++ b/bin/webster/configs/webster-prv.config
@@ -10,6 +10,7 @@ sorcer.tools.codeserver {
 
     home = "${sorcer.home}";
     rootDir = Resolver.getRootDir() + "/";
+    repoDir = Resolver.getRepoDir() + "/";
     jiniLibPath 	 = home + "${/}lib${/}river";
     deployPath 		 = home + "${/}deploy";
 
@@ -22,7 +23,9 @@ sorcer.tools.codeserver {
     endPort = Booter.getWebsterEndPort();
     isDaemon = false;
     
-    roots = new String[] { rootDir,
+    roots = new String[] {
+      rootDir,
+      repoDir,
       jiniLibPath,
       deployPath,
     };
