updated ex5 and required changes

--- a/examples/ex5/ex5-req/pom.xml
+++ b/examples/ex5/ex5-req/pom.xml
@@ -13,7 +13,7 @@
 	<name>SORCER examples :: ex5 :: req</name>
 
     <properties>
-        <skipTests>true</skipTests>
+        <skipTests>false</skipTests>
     </properties>
 
 	<dependencies>
