--- a/examples/ex5/ex5-req/src/main/resources/META-INF/sorcer/exertlet-prv.config
+++ b/examples/ex5/ex5-req/src/main/resources/META-INF/sorcer/exertlet-prv.config
@@ -21,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 		publishedInterfaces = new Class[] { sorcer.service.Invocation.class, sorcer.service.Evaluation.class };
 			
 		// service beans	
-		beans = new Object[] { NetArithmeticReq.createArithmeticExertlet() };
+		beans = new Object[] { NetArithmeticReq.createArithmeticJob() };
 		
 		iconName="sorcer.jpg";
 }
